--- a/index.html
+++ b/index.html
@@ -33,21 +33,18 @@
 <!------------------------------------------------------------------->
  <div class="content">
 <!------------------------------------------------------------------->
-  <div class="news" id="nav-news">
-   <p style="color: red">
-    <b style="font-weight: 500;">I'm pleased to announce two open positions for 2026: one for a PhD student and one for a postdoctoral researcher.</b> The PhD position offers a 4-year scholarship and is aimed at highly motivated candidates interested in the physics of strongly correlated electron systems. The postdoctoral position is a 2-year contract designed for applicants with a strong research background in the physics of the Hubbard model (or its variants) and numerical methods for low-dimensional quantum systems. Interested candidates are encouraged to reach out for more information and application details.
-   </p>
-  </div>
   <div class="info" id="nav-info">
-   <p>
-    <div class="twotabinfo">
-     <div style="width:250px;">
-      <img src="pic/jacek.jpg" style="height:150px;">
-     </div>
-     <div>
-      I'm a theoretical physicist exploring the fascinating world of quantum many-body systems - particularly the behavior of electrons in low-dimensional strongly-correlated setups. Since 2019, I have been working at the Institute of Theoretical Physics of Wrocław University of Science and Technology (Poland). In the past, I worked in Slovenia, Greece, and the USA. I combine analytical approaches with advanced numerical methods to investigate phenomena such as quantum transport & dynamics, emergent magnetic properties, or unconventional superconductivity.
-     </div>
+   <div class="twotabinfo">
+    <div style="width:250px;">
+     <img src="pic/jacek.jpg" style="height:150px;">
     </div>
+    <div>
+     I'm a theoretical physicist exploring the fascinating world of quantum many-body systems, particularly the behavior of electrons in low-dimensional, strongly correlated setups. Since 2019, I have been working at the Institute of Theoretical Physics, Wrocław University of Science and Technology (Poland). In the past, I worked in Slovenia, Greece, and the USA. In my work, I combine analytical approaches with advanced numerical methods to investigate phenomena such as quantum transport and dynamics, emergent magnetic properties, and unconventional superconductivity.
+    </div>
+   </div>
+   <p style="color: red">
+    &#9900; <u><b>Open Positions</b></u><br>
+    <b style="font-weight: 500;">I'm pleased to announce two open positions for 2026: one for a PhD student and one for a postdoctoral researcher.</b> The PhD position offers a 4-year scholarship and is aimed at highly motivated candidates interested in the physics of strongly correlated electron systems. The postdoctoral position is a 2-year contract designed for applicants with a strong research background in the physics of the Hubbard model (or its variants) and numerical methods for low-dimensional quantum systems. Interested candidates are encouraged to reach out for more information and application details.
    </p>
    <h3>&emsp;&#9702; info</h3>
    <p>
@@ -78,15 +75,14 @@
    </p>
    <p>
     <b>&#9900; Group</b>
-    <br>&emsp;&#9900; (phd) Mateusz Lisiecki - <em>Doping of Kitaev-Heisenberg model</em>
+    <br>&emsp;&#9900; (phd) Mateusz Lisiecki
     <span style="vertical-align:-35%;"> </span>
     <br>&emsp;&#9900; (master) Julia Koczorowska - <em>Spin excitations in Kitaev ladder</em>
     <br>&emsp;&#9900; (master) Jakub Prokopczyk - <em>Orthogonal finite-temperature Lanczos method: application to the t-J-Kitaev model</em>
     <br>&emsp;&#9900; (master) Błażej Zdobylak - <em>Entanglement & correlations between charge and spin degrees of freedom</em>
     <span style="vertical-align:-35%;"> </span>
-    <br>&emsp;&#9900; (diploma) Jagoda Maląg - <em>Time evolution of fluctuations as a measure of entropy</em>
-    <br>&emsp;&#9900; (diploma) Jakub Wawruszczak - <em>Dynamics of monitored quantum systems</em>
-    <br>&emsp;&#9900; (diploma) Jagoda Zawisz - <em>Majorana fermions in strongly-correlated systems</em>
+    <br>&emsp;&#9900; (diploma) Szymon Morys - <em>Ergodic & nonergodic quantum circuits</em>
+    <br>&emsp;&#9900; (diploma) Piotr Złotowski - <em>Controlling integrability via Trotter discretization</em>
    </p>
    <p>
     <b>&#9900; Past</b>
@@ -95,6 +91,9 @@
     <br>&emsp;&#9900; (2021 master) Rafał Świętek - <em>Exact diagonalization studies of generalized Kondo-Heisenberg model</em>
     <br>&emsp;&#9900; (2021 master) Łukasz Iwanek - <em>Many-body mobility edge in random-exchange systems</em>
     <span style="vertical-align:-35%"> </span>
+    <br>&emsp;&#9900; (2026 diploma) Jagoda Maląg - <em>Time evolution of fluctuations as a measure of entropy</em>
+    <br>&emsp;&#9900; (2026 diploma) Jakub Wawruszczak - <em>Dynamics of monitored quantum systems</em>
+    <br>&emsp;&#9900; (2026 diploma) Jagoda Zawisz - <em>Majorana fermions in strongly-correlated systems</em>
     <br>&emsp;&#9900; (2025 diploma) Jakub Prokopczyk - <em>Spin dynamics of doped two-orbital Hubbard model</em>
     <br>&emsp;&#9900; (2025 diploma) Błażej Zdobylak - <em>Particle expansion in tight-binding quantum chaotic system</em>
     <br>&emsp;&#9900; (2024 diploma) Kacper Drabikowski - <em>Correlation lengths within orbital-selective Mott phase</em>
@@ -172,7 +171,7 @@
      <div>
       <a href="https://www.jsps.go.jp/english/e-inv/" target="blank_" style="font-weight: 500;">Japan Society for the Promotion of Science (JSPS)</a>
       <br><a href="https://www.jsps.go.jp/file/storage/e-inv/adoptlist/FY2026/2026_short_1_e.pdf" target="blank_" style="font-weight: 500;">Invitational Fellowships for Research in Japan</a>
-      <br>Visiting Scientist of Prof. Takami Tohyama, VII.2026 - IX.2026
+      <br>Visiting Scientist of Prof. Takami Tohyama, VIII.2026 - IX.2026
       <br>Tokyo University of Science, Japan
      </div>
      <div style="width:250px; margin-left: auto; margin-right: 0; margin-top: 5px;">
