--- a/index.html
+++ b/index.html
@@ -278,17 +278,17 @@
     &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
     Publications supported by <img src="files/svg/nawa2019.svg" style="height:11px;"> <b>NAWA Polish Returns</b> PPN/PPO/2018/1/00035 (2019-2022)</a>:
    </p>
-   <p class="ncn2024">
-    (preprint) <img src="files/svg/ncn2024.svg" style="height:11px;"> 
-    <b>Doping S=1 antiferromagnet in one-dimension</b>
-    <br>J. Prokopczyk and <u>J. Herbrych</u>
-    <br><a href="http://arxiv.org/abs/2508.07712" target="blank_">arXiv: cond-mat/2508.07712</a>
-   </p>
    <p class="allpub" style="background: #f5f9fc">
     (preprint) 
     <b>Revisiting boundary-driven method for transport: Finite-size effects and the role of system-bath coupling</b>
     <br>M. Kempa, M. Kraft, S. Nandy, <u>J. Herbrych</u>, J. Wang, J. Gemmer, and R. Steinigeweg
     <br><a href="http://arxiv.org/abs/2507.16528" target="blank_">arXiv: cond-mat/2507.16528</a>
+   </p>
+   <p class="ncn2024">
+    (60) <img src="files/svg/ncn2024.svg" style="height:11px;"> 
+    <b>Doping S=1 antiferromagnet in one-dimension</b>
+    <br>J. Prokopczyk and <u>J. Herbrych</u>
+    <br><a href="https://doi.org/10.1103/kzwg-8853" target="blank_">Phys. Rev. B <b>113</b>, 024424 (2026)</a>&emsp;& &emsp;<a href="http://arxiv.org/abs/2508.07712" target="blank_">arXiv: cond-mat/2508.07712</a>
    </p>
    <p class="allpub">
     (59) 
