--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
      &emsp;50-370 Wrocław, Poland
    </p>
    <p>
-    <b>&#9900; My appointments & education</b>
-    <br>&emsp;&#9900; since 2019 Wrocław University of Science and Technology (Wrocław, Poland)
-    <br>&emsp;&#9900; 2022 Habilitation at University of Warsaw (Warsaw, Poland)
-    <br>&emsp;&#9900; 2016 - 2019 Oak Ridge National Laboratory (Oak Ridge, USA)
-    <br>&emsp;&#9900; 2016 - 2019 University of Tennessee (Knoxville, USA)
-    <br>&emsp;&#9900; 2013 - 2016 Crete Center for Quantum Complexity and Nanotechnology (Heraklion, Greece)
-    <br>&emsp;&#9900; 2013 - 2016 University of Crete (Heraklion, Greece)
-    <br>&emsp;&#9900; 2010 - 2013 Jožef Stefan Institute (Ljubljana, Slovenia)
-    <br>&emsp;&#9900; 2010 - 2013 PhD studies at University of Ljubljana (Ljubljana, Slovenia)
-    <br>&emsp;&#9900; 2005 - 2010 MSc studies at University of Łódź (Łódź, Poland)
+    <br>&emsp;&#9900; <u>2026</u> Visiting scholar at Tokyo University of Science (Tokyo, Japan)
+    <br>&emsp;&#9900; <u>since 2019</u> Wrocław University of Science and Technology (Wrocław, Poland)
+    <br>&emsp;&#9900; <u>2022 Habilitation</u> University of Warsaw (Warsaw, Poland)
+    <br>&emsp;&#9900; <u>2016 - 2019</u> Oak Ridge National Laboratory (Oak Ridge, USA)
+    <br>&emsp;&#9900; <u>2016 - 2019</u> University of Tennessee (Knoxville, USA)
+    <br>&emsp;&#9900; <u>2013 - 2016</u> Crete Center for Quantum Complexity and Nanotechnology (Heraklion, Greece)
+    <br>&emsp;&#9900; <u>2013 - 2016</u> University of Crete (Heraklion, Greece)
+    <br>&emsp;&#9900; <u>2010 - 2013</u> Jožef Stefan Institute (Ljubljana, Slovenia)
+    <br>&emsp;&#9900; <u>2010 - 2013</u> PhD studies at University of Ljubljana (Ljubljana, Slovenia)
+    <br>&emsp;&#9900; <u>2005 - 2010</u> MSc studies at University of Łódź (Łódź, Poland)
    </p>
    <p>
      <b>&#9900; Links</b>
