--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <h2><a href="https://www.pwr.edu.pl" target="blank_">Wrocław University of Science and Technology</a></h2>
    </div>
    <div style="margin-left:auto; margin-right:0;">
-    <a href="https://www.kft.pwr.edu.pl" target="blank_"><img src="files/itp.png" alt="KFT" style="height:65px; padding-left:10x; padding-right:10px;"></a>
-    <a href="https://www.pwr.edu.pl" target="blank_"><img src="files/pwr.png" alt="PWr" style="height:75px; padding-left:10x; padding-right:10px;"></a>
+    <a href="https://www.kft.pwr.edu.pl" target="blank_"><img src="files/itp.png" alt="KFT" style="height:65px; padding-left:10x; padding-right:10px; filter: drop-shadow(2px 2px 4px black);"></a>
+    <a href="https://www.pwr.edu.pl" target="blank_"><img src="files/pwr.png" alt="PWr" style="height:75px; padding-left:10x; padding-right:10px; filter: drop-shadow(2px 2px 4px black);"></a>
    </div>
   </div> <!-- headertab -->
   <div class="navigation" id="navigation">
    &#9679; <a href="#" class="btn active">info</a> 
    &#9679; <a href="#nav-research" class="btn">research</a> 
-   &#9679; <a href="#nav-funding" class="btn">funding</a> 
+   &#9679; <a href="#nav-funding" class="btn">projects</a> 
    &#9679; <a href="#nav-publications" class="btn">publications</a> 
    &#9679; 
   </div> <!-- navigation -->
@@ -36,16 +36,31 @@
   <div class="info" id="nav-info">
    <div class="twotabinfo">
     <div style="width:250px;">
-     <img src="pic/jacek.jpg" style="height:150px;">
+     <img src="pic/jacek.jpg" style="height:150px; filter: drop-shadow(2px 2px 4px black);">
     </div>
     <div>
      I'm a theoretical physicist exploring the fascinating world of quantum many-body systems, particularly the behavior of electrons in low-dimensional, strongly correlated setups. Since 2019, I have been working at the Institute of Theoretical Physics, Wrocław University of Science and Technology (Poland). In the past, I worked in Slovenia, Greece, and the USA. In my work, I combine analytical approaches with advanced numerical methods to investigate phenomena such as quantum transport and dynamics, emergent magnetic properties, and unconventional superconductivity.
     </div>
    </div>
-   <p style="color: red">
-    &#9900; <u><b>Open Positions</b></u><br>
-    <b style="font-weight: 500;">I'm pleased to announce two open positions for 2026: one for a PhD student and one for a postdoctoral researcher.</b> The PhD position offers a 4-year scholarship and is aimed at highly motivated candidates interested in the physics of strongly correlated electron systems. The postdoctoral position is a 2-year contract designed for applicants with a strong research background in the physics of the Hubbard model (or its variants) and numerical methods for low-dimensional quantum systems. Interested candidates are encouraged to reach out for more information and application details.
+   <div class="twotabinfo">
+    <div>
+    </div>
+    <div>
+     <b>My research has been supported by the following agencies:</b><br>
+     <a href="#nav-funding">
+      <img src="files/nawa.png" style="margin-top: 5px; margin-left: 0px; height:50px; filter: drop-shadow(1px 1px 3px grey);">
+      <img src="files/ncn.png" style="margin-top: 5px; margin-left: 5px; height:50px; filter: drop-shadow(1px 1px 3px grey);">
+      <img src="files/wcss.png" style="margin-top: 5px; margin-left: 0px; height:50px; filter: drop-shadow(1px 1px 3px grey);">
+      <img src="files/jsps.png" style="margin-top: 5px; margin-left: 5px; height:50px; filter: drop-shadow(1px 1px 3px grey);">
+     </a>
+    </div>
+   </div>
+   <div>
+    <p style="color: red">
+     &#9900; <u><b>Open Positions</b></u><br>
+     <b style="font-weight: 500;">I'm pleased to announce two open positions for 2026: one for a PhD student and one for a postdoctoral researcher.</b> The PhD position offers a 4-year scholarship and is aimed at highly motivated candidates interested in the physics of strongly correlated electron systems. The postdoctoral position is a 2-year contract designed for applicants with a strong research background in the physics of the Hubbard model (or its variants) and numerical methods for low-dimensional quantum systems. Interested candidates are encouraged to reach out for more information and application details.
    </p>
+   </div>
    <h3>&emsp;&#9702; info</h3>
    <p>
     <b>&#9900; Contact:</b> jacek.herbrych <svg xmlns="http://www.w3.org/2000/svg" width="12px" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 64C150 64 64 150 64 256s86 192 192 192c17.7 0 32 14.3 32 32s-14.3 32-32 32C114.6 512 0 397.4 0 256S114.6 0 256 0S512 114.6 512 256l0 32c0 53-43 96-96 96c-29.3 0-55.6-13.2-73.2-33.9C320 371.1 289.5 384 256 384c-70.7 0-128-57.3-128-128s57.3-128 128-128c27.9 0 53.7 8.9 74.7 24.1c5.7-5 13.1-8.1 21.3-8.1c17.7 0 32 14.3 32 32l0 80 0 32c0 17.7 14.3 32 32 32s32-14.3 32-32l0-32c0-106-86-192-192-192zm64 192a64 64 0 1 0 -128 0 64 64 0 1 0 128 0z"/></svg> pwr.edu.pl<br>
@@ -55,7 +70,8 @@
      &emsp;50-370 Wrocław, Poland
    </p>
    <p>
-    <br>&emsp;&#9900; <u>2026</u> Visiting scholar at Tokyo University of Science (Tokyo, Japan)
+    <b>&#9900; My appointments & education</b>
+    <br>&emsp;&#9900; <u>2026</u> Visiting professor at Tokyo University of Science (Tokyo, Japan)
     <br>&emsp;&#9900; <u>since 2019</u> Wrocław University of Science and Technology (Wrocław, Poland)
     <br>&emsp;&#9900; <u>2022 Habilitation</u> University of Warsaw (Warsaw, Poland)
     <br>&emsp;&#9900; <u>2016 - 2019</u> Oak Ridge National Laboratory (Oak Ridge, USA)
@@ -116,22 +132,22 @@
    </p>
    <div class="threetab" style="width:750px;">
     <div style="width:250px;">
-     <a href="https://www.pnas.org/content/117/28/16226" target="blank_"><img src="files/pubpic/pub11.jpg" style="width:250px;"></a>
+     <a href="https://www.nature.com/articles/s41467-021-23261-2" target="blank_"><img src="files/pubpic/pub11.jpg" style="width:240px;"></a>
     </div>
     <div style="width:250px;">
-     <a href="https://www.nature.com/articles/s41467-021-23261-2" target="blank_"><img src="files/pubpic/pub12.jpg" style="width:250px;"></a>
+     <a href="https://www.nature.com/articles/s41467-023-44135-9" target="blank_"><img src="files/pubpic/pub12.jpg" style="width:240px;"></a>
     </div>
     <div style="width:250px;">
-     <a href="https://www.nature.com/articles/s41467-023-44135-9" target="blank_"><img src="files/pubpic/pub13.jpg" style="width:250px;"></a>
-    </div>
-    <div style="width:250px; text-align:center;">
-     <a href="https://www.pnas.org/content/117/28/16226" target="blank_">Proc. Natl. Acad. Sci.<b>117</b>, 16226 (2020)</a>
+     <a href="https://iopscience.iop.org/article/10.1088/1361-6633/add6d4" target="blank_"><img src="files/pubpic/pub13.jpg" style="width:240px;"></a>
     </div>
     <div style="width:250px; text-align:center;">
      <a href="https://www.nature.com/articles/s41467-021-23261-2" target="blank_">Nat. Commun. <b>12</b>, 2955 (2021)</a>
     </div>
     <div style="width:250px; text-align:center;">
      <a href="https://www.nature.com/articles/s41467-023-44135-9" target="blank_">Nat. Commun. <b>14</b>, 8524 (2023)</a>
+    </div>
+    <div style="width:250px; text-align:center;">
+     <a href="https://iopscience.iop.org/article/10.1088/1361-6633/add6d4" target="blank_">Rep. Prog. Phys. <b>88</b>, 068001 (2025)</a>
     </div>
    </div>
    <p style="margin-top: 30px;">
@@ -143,39 +159,45 @@
    </p>
    <div class="threetab" style="width:750px;">
     <div style="width:250px;">
-     <a href="http://link.aps.org/doi/10.1103/PhysRevB.104.115163" target="blank_"><img src="files/pubpic/pub21.jpg" style="width:250px;"></a>
+     <a href="http://link.aps.org/doi/10.1103/PhysRevB.105.L081105" target="blank_"><img src="files/pubpic/pub21.jpg" style="width:250px;"></a>
     </div>
     <div style="width:250px;">
-     <a href="http://link.aps.org/doi/10.1103/PhysRevB.105.L081105" target="blank_"><img src="files/pubpic/pub22.jpg" style="width:250px;"></a>
+     <a href="http://link.aps.org/doi/10.1103/PhysRevB.107.045134" target="blank_"><img src="files/pubpic/pub22.jpg" style="width:250px;"></a>
     </div>
     <div style="width:250px;">
-     <a href="http://link.aps.org/doi/10.1103/PhysRevB.107.045134" target="blank_"><img src="files/pubpic/pub23.jpg" style="width:250px;"></a>
+     <a href="https://doi.org/10.1103/fysk-w1vs" target="blank_"><img src="files/pubpic/pub23.jpg" style="width:180px;"></a>
     </div>
     <div style="width:250px; text-align:center;">
-     <a href="http://link.aps.org/doi/10.1103/PhysRevB.104.115163" target="blank_">Phys. Rev. B <b>104</b>, 115163 (2021)</a>
+     <a href="http://link.aps.org/doi/10.1103/PhysRevB.105.L081105" target="blank_">Phys. Rev. B <b>105</b>, L081105 (2021)</a>
     </div>
     <div style="width:250px; text-align:center;">
-     <a href="http://link.aps.org/doi/10.1103/PhysRevB.105.L081105" target="blank_">Phys. Rev. B <b>105</b>, L081105 (2022)</a>
+     <a href="http://link.aps.org/doi/10.1103/PhysRevB.107.045134" target="blank_">Phys. Rev. B <b>107</b>, 045134 (2022)</a>
     </div>
     <div style="width:250px; text-align:center;">
-     <a href="http://link.aps.org/doi/10.1103/PhysRevB.107.045134" target="blank_">Phys. Rev. B <b>107</b>, 045134 (2023)</a>
+     <a href="https://doi.org/10.1103/fysk-w1vs" target="blank_">Phys. Rev. B <b>112</b>, 195116 (2025)</a>
     </div>
    </div>
+   <p style="margin-top: 30px;">
+    &#9900; <b>Dynamics of quantum circuits</b><br>
+    The study of quantum circuit dynamics has recently emerged as a powerful framework for understanding nonequilibrium behavior in complex quantum systems. In contrast to equilibrium condensed-matter settings, quantum circuits naturally describe unitary time evolution interspersed with measurements, dissipation, or noise, thereby providing insight into entanglement growth, information scrambling, and thermalization. Of particular interest is the competition between coherent gate operations and projective measurements, which can drive measurement-induced phase transitions between volume-law and area-law entangled phases. Such transitions reveal fundamentally new universality classes that have no classical counterpart. Furthermore, random quantum circuits serve as minimal models for quantum chaos, operator spreading, and the emergence of hydrodynamic behavior in strongly interacting systems. Due to their flexibility and direct relevance to current noisy intermediate-scale quantum (NISQ) devices, quantum circuits have become a versatile platform for exploring the interplay between quantum information, many-body physics, and statistical mechanics.
+   </p>
+<!--   <p>
+   </p>-->
    <div class="divend"></div>
   </div> <!-- research -->
 <!------------------------------------------------------------------>
   <div class="funding" id="nav-funding">
-   <h3>&emsp;&#9702; funding & support</h3>
+   <h3>&emsp;&#9702; projects, funding & support</h3>
    <p>
     <div class="twotab">
      <div>
       <a href="https://www.jsps.go.jp/english/e-inv/" target="blank_" style="font-weight: 500;">Japan Society for the Promotion of Science (JSPS)</a>
       <br><a href="https://www.jsps.go.jp/file/storage/e-inv/adoptlist/FY2026/2026_short_1_e.pdf" target="blank_" style="font-weight: 500;">Invitational Fellowships for Research in Japan</a>
-      <br>Visiting Scientist of Prof. Takami Tohyama, VIII.2026 - IX.2026
+      <br>Visiting professor, VIII.2026 - IX.2026
       <br>Tokyo University of Science, Japan
      </div>
      <div style="width:250px; margin-left: auto; margin-right: 0; margin-top: 5px;">
-      <a href="https://www.jsps.go.jp/english/" target="blank_"><img src="files/jsps.png" style="height:80px;"></a>
+      <a href="https://www.jsps.go.jp/english/" target="blank_"><img src="files/jsps.png" style="height:80px; filter: drop-shadow(1px 1px 3px grey);"></a>
      </div>
     </div>
    </p>
@@ -189,7 +211,7 @@
       <br>Wrocław University of Science and Technology (Poland)
      </div>
      <div style="width:250px; margin-left: auto; margin-right: 0;">
-      <a href="https://ncn.gov.pl/?language=en" target="blank_"><img src="files/ncn.png" style="height:70px;"></a>
+      <a href="https://ncn.gov.pl/?language=en" target="blank_"><img src="files/ncn.png" style="height:70px; filter: drop-shadow(1px 1px 3px grey);"></a>
      </div>
     </div>
    </p>
@@ -204,7 +226,7 @@
       <br>
      </div>
      <div style="width:250px; margin-left: auto; margin-right: 0; margin-top: 5px;">
-      <a href="https://www.wcss.pl/en/" target="blank_"><img src="files/wcss.png" style="width:210px;"></a>
+      <a href="https://www.wcss.pl/en/" target="blank_"><img src="files/wcss.png" style="width:210px; filter: drop-shadow(1px 1px 3px grey);"></a>
      </div>
     </div>
    </p>
@@ -278,13 +300,13 @@
     &#9900; <a onclick="allpub()">See <b>all</b> publications</a><br><br>
     Publications supported by <img src="files/svg/nawa2019.svg" style="height:11px;"> <b>NAWA Polish Returns</b> PPN/PPO/2018/1/00035 (2019-2022)</a>:
    </p>
-   <p class="allpub" style="background: #f5f9fc">
-    (preprint) 
-    <b>Revisiting boundary-driven method for transport: Finite-size effects and the role of system-bath coupling</b>
+   <p class="allpub">
+    (61) 
+    <b>Boundary-driven magnetization transport in the spin-1/2 XXZ chain: Role of the system-bath coupling strength and timescales</b>
     <br>M. Kempa, M. Kraft, S. Nandy, <u>J. Herbrych</u>, J. Wang, J. Gemmer, and R. Steinigeweg
-    <br><a href="http://arxiv.org/abs/2507.16528" target="blank_">arXiv: cond-mat/2507.16528</a>
+    <br><a href="https://doi.org/10.1103/95pc-s3b3" target="blank_">Phys. Rev. B <b>113</b>, 064431 (2026)</a>&emsp;& &emsp;<a href="http://arxiv.org/abs/2507.16528" target="blank_">arXiv: cond-mat/2507.16528</a>
    </p>
-   <p class="ncn2024">
+   <p class="ncn2024" style="background: #f5f9fc">
     (60) <img src="files/svg/ncn2024.svg" style="height:11px;"> 
     <b>Doping S=1 antiferromagnet in one-dimension</b>
     <br>J. Prokopczyk and <u>J. Herbrych</u>
