--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div>
     </div>
     <div>
-     <b>My research has been supported by the following agencies:</b><br>
+     <b>My research has been supported by:</b><br>
      <a href="#nav-funding">
       <img src="files/nawa.png" style="margin-top: 5px; margin-left: 0px; height:50px; filter: drop-shadow(1px 1px 3px grey);">
       <img src="files/ncn.png" style="margin-top: 5px; margin-left: 5px; height:50px; filter: drop-shadow(1px 1px 3px grey);">
